styles/style.css
.page {
  min-width: 1100px;
  max-width: 1600px;
  margin: 0 auto;
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  background-color: #f2f2f2;
  position: relative;
  display: flex;
  margin-bottom: 100px;
}

.logo_place_header {
  width: 154px;
  height: 31px;
  position: absolute;
  top: 30px;
  left: 64px;
  z-index: 3;
}

.header__title {
  width: 730px;
  margin: 0 0 0 64px;
  align-self: center;
  line-height: 96px;
  font-size: 102px;
  font-weight: bold;
  z-index: 2;
}

.header__subtitle {
  margin: 0;
  z-index: 2;
  position: absolute;
  width: 388px;
  left: 64px;
  bottom: 30px;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.header__link {
  color: #2f80ed;
  text-decoration: none;
}

.header__main-illustration {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 1;
  width: 765px;
  height: 608px;
}

.header__square-pic {
  height: 568px;
  width: 568px;
  background-color: #2f80ed;
  position: absolute;
  top: 64px;
  right: 0;
  z-index: 0;
}

.description {
  margin-bottom: 100px;
  display: flex;
  justify-content: space-between;
  align-items: space-between;
}

.two-columns {
  width: 80%;
  display: flex;
  align-items: space-between;
  justify-content: center;
  margin: 0 auto;
}

.two-columns__brief {
  width: 175px;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  text-decoration: none;
  color:#2f80ed;
  margin: 0;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  margin: 0;
}

.two-columns__paragraph {
  margin: 0 0 30px 0;
}

.two-columns__paragraph:last-child {
  margin-bottom: 0;
}

.two-columns__span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: bold;
}

.digits {
  margin-bottom: 100px;
}

.section-title {
  width: 60%;
  text-align: center;
  margin: 0 auto 20px;
  line-height: 1.15;
  font-size: 60px;
  font-weight: bold;
}

.section-subtitle {
  width: 60%;
  text-align: center;
  margin: 0 auto;
  justify-content: center;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.table {
  width: 1100px;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0;
  list-style: none;
}

.table__cell {
  width: 250px;
  margin-top: 60px;
}

.table__heading {
  margin: 0 0 20px 0;
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
}

.table__text {
  margin: 0 0 20px 0;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}

.table__text:nth-child(3), .table__text:nth-child(7) {
  margin-bottom: 0;
}

.feynman {
  background-color: #f2f2f2;
  background-image: url(../images/feynman.png);
  background-repeat: no-repeat;
  background-position: left bottom;
  min-height: 790px;
  position: relative;
  padding-top: 100px;
}

.feynman__title {
  width: 775px;
  margin: 0 auto 70px;
  line-height: 1.15;
  font-size: 120px;
  font-weight: bold;
  text-align: center;
}

.feynman__subtitle {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  margin: 0 auto;
  text-align: center;
}

.feynman__link {
  position: absolute;
  top: 50%;
  right: 48px;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  text-decoration: none;
  color: #2f80ed;
}

.kaufman {
  padding-top: 90px;
  padding-bottom: 90px;
  background-color: #1f1f1f;
  color: #fff;
  overflow: hidden;
  position: relative;
}

.section-title_theme_dark {
  width: 60%;
  margin: 0 auto 20px;
  text-align: center;
  line-height: 1.15;
  font-size: 60px;
  font-weight: bold;
}

.section-subtitle_theme_dark {
  width: 60%;
  text-align: center;
  margin: 0 auto;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.table_theme_dark {
  margin: 0 auto;
  width: 1100px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0;
  list-style: none;
}

.table__cell_theme_dark {
  margin-top: 80px;
  width: 200px;
  z-index: 1;
}

.table__heading_theme_dark {
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
}

.table__text_theme_dark {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}

.kaufman__triangle {
  background: url(../images/kaufman-triangle.svg) no-repeat right top;
  background-size: contain;
  width: 877px;
  height: 877px;
  position: absolute;
  top: 0;
  right: -210px;
  z-index: 0;
}

.footer {
  box-sizing: border-box;
  padding: 60px 0 40px 0;
  display: flex;
  min-height: 350px;
  background-color: #1f1f1f;
  color: #fff;
}

.logo_place_footer {
  width: 183px;
  height: 35px;
}

.footer__columns {
  display: flex;
  flex-direction: row;
  width: 90%;
  justify-content: space-between;
  margin: 0 auto;
}

.footer__column_content_copyright {
  flex-basis: 711px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer__author {
  margin: 18px 0;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column_content_info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.footer__column-heading {
  margin: 0 0 20px 0;
  line-height: 45px;
  font-size: 18px;
  font-weight: bold;
}

.footer__column-links {
  list-style: none;
  margin: 0 0 16px 0;
  padding: 0;
}

.footer__link {
  text-decoration: none;
  color: #fff;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column_content_social {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.footer__social-icon {
  margin-right: 10px;
  width: 16px;
  height: 16px;
}

